Styled up the header

--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="utf-8">
     <title>Vicious Cycles</title>
+    <style>
+    	body {
+			background-color:#e7fbfb;
+			}
+			
+		header {
+			font-size:4em;
+			text-align:center;
+			color:#010B5B;
+			}
+    </style>
 </head>
 <body>
 	<header>
